--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <div id="app">
-    <!-- LOGIN -->
     <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
@@ -18,7 +17,6 @@
       </div>
     </div>
 
-    <!-- MAIN -->
     <div id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">Dashboard</a>
@@ -30,7 +28,6 @@
       </nav>
 
       <div class="container">
-        <!-- HOME -->
         <section id="home">
           <div class="section">
             <h2>Overview</h2>
@@ -45,10 +42,10 @@
 
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table class="table">
+            <table id="stockByCountryTable" class="table">
               <thead><tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr></thead>
               <tbody id="stockByCountryBody"></tbody>
-              <tfoot><tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0</th></tr></tfoot>
+              <tfoot><tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr></tfoot>
             </table>
           </div>
 
@@ -99,7 +96,8 @@
             <h2>Stock Movement</h2>
             <div class="card">
               <div class="row wrap">
-                <select id="mvFrom" class="input"></select><span>→</span>
+                <select id="mvFrom" class="input"></select>
+                <span>→</span>
                 <select id="mvTo" class="input"></select>
                 <select id="mvProduct" class="input"></select>
                 <input id="mvQty" type="number" class="input" placeholder="Qty" min="0"/>
@@ -111,7 +109,7 @@
 
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table">
+            <table class="table" id="shipCK">
               <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
               <tbody id="shipCKBody"></tbody>
             </table>
@@ -119,7 +117,7 @@
 
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table">
+            <table class="table" id="shipIC">
               <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
               <tbody id="shipICBody"></tbody>
             </table>
@@ -133,7 +131,7 @@
               <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
-            <table class="table">
+            <table class="table" id="profitCountry">
               <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
               <tbody id="profitCountryBody"></tbody>
               <tfoot><tr class="totals"><th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th></tr></tfoot>
@@ -160,13 +158,16 @@
               <select id="lpProduct" class="input"><option value="">All products</option></select>
               <input id="lpStart" type="date" class="input"/>
               <input id="lpEnd" type="date" class="input"/>
-              <button id="lpRun" class="btn" onclick="document.querySelector('#pfRun')?.click()">Run</button>
+              <button id="lpRun" class="btn">Run</button>
             </div>
-            <!-- Uses Performance logic/results -->
+            <table class="table" id="lifetimeTable">
+              <thead><tr><th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+              <tbody id="lifetimeBody"></tbody>
+              <tfoot><tr class="totals"><th colspan="2">Totals</th><th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th></tr></tfoot>
+            </table>
           </div>
         </section>
 
-        <!-- PRODUCTS -->
         <section id="products" style="display:none">
           <h2>Products</h2>
           <div class="card">
@@ -174,22 +175,21 @@
             <div class="row wrap">
               <input id="pName" class="input" placeholder="Name"/>
               <input id="pSku" class="input" placeholder="SKU"/>
-              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
-              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" step="0.01"/>
-              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" step="0.01"/>
+              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" min="0" step="0.01"/>
+              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" min="0" step="0.01"/>
+              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01"/>
               <button id="pAdd" class="btn">Add</button>
             </div>
           </div>
+
           <table id="productsTable" class="table">
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody></tbody>
           </table>
         </section>
 
-        <!-- PERFORMANCE -->
         <section id="performance" style="display:none">
           <h2>Performance</h2>
-
           <div class="card">
             <div class="h">Top Delivered Products</div>
             <div class="row wrap">
@@ -200,7 +200,7 @@
               </select>
               <input id="pfStart" type="date" class="input"/>
               <input id="pfEnd" type="date" class="input"/>
-              <select id="pfCountry" class="input"><option value="">All countries</option></select>
+              <select id="pfCountry" class="input"></select>
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
@@ -227,22 +227,13 @@
           </div>
         </section>
 
-        <!-- FINANCE -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
-
-          <div class="card big-balance">
-            <div class="h">Running Balance (All-time)</div>
-            <div id="runBalance" class="balance">0.00 USD</div>
-          </div>
-
+          <div class="card big-balance"><div class="h">Running Balance (All-time)</div><div id="runBalance" class="balance">0.00 USD</div></div>
           <div class="card">
             <div class="h">Categories</div>
             <div class="row wrap">
-              <select id="fcType" class="input">
-                <option value="debit">Debit</option>
-                <option value="credit">Credit</option>
-              </select>
+              <select id="fcType" class="input"><option value="debit">Debit</option><option value="credit">Credit</option></select>
               <input id="fcName" class="input" placeholder="Category name"/>
               <button id="fcAdd" class="btn">Add Category</button>
             </div>
@@ -251,39 +242,23 @@
               <div><h4>Credits</h4><div id="fcCredits" class="chips"></div></div>
             </div>
           </div>
-
           <div class="card">
             <div class="h">Entries</div>
             <div class="row wrap">
-              <input id="feDate" type="date" class="input"/>
-              <select id="feType" class="input">
-                <option value="debit">Debit</option>
-                <option value="credit">Credit</option>
-              </select>
+              <input id="feStart" type="date" class="input"/>
+              <input id="feEnd" type="date" class="input"/>
+              <select id="feType" class="input"><option value="debit">Debit</option><option value="credit">Credit</option></select>
               <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
             </div>
-
-            <div class="row wrap">
-              <input id="fes" type="date" class="input"/>
-              <input id="fee" type="date" class="input"/>
-              <button id="feRun" class="btn outline">Run</button>
-              <div id="feBalance" class="badge">Period Balance: —</div>
-            </div>
-
-            <table id="feTable" class="table">
-              <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead>
-              <tbody></tbody>
-            </table>
+            <table id="feTable" class="table"><thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead><tbody></tbody></table>
           </div>
         </section>
 
-        <!-- SETTINGS -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
-
           <div class="card">
             <div class="h">Countries</div>
             <div class="row">
@@ -292,7 +267,6 @@
             </div>
             <div id="ctyList" class="chips deletable"></div>
           </div>
-
           <div class="card">
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
@@ -305,7 +279,6 @@
               <button id="epSave" class="btn">Save Changes</button>
             </div>
           </div>
-
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
             <div class="row">
@@ -321,8 +294,6 @@
       </div>
     </div>
   </div>
-
-  <!-- App -->
   <script src="/public/app.js"></script>
 </body>
 </html>
